<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- アプリケーション -->
    <string name="app_name">CalMemo</string>
    <!-- 画面タイトル -->
    <string name="cm_calendar_title">アルバム</string>
    <string name="cm_photographs_title">フォト</string>
    <string name="cm_hint_title">マニュアル</string>
    <!-- カレンダー機能用 -->
    <string name="arg_display_year">argDisplayYear</string>
    <string name="arg_display_month">argDisplayMonth</string>
    <!-- 曜日 -->
    <string name="sunday">日</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>
    <!-- Realm -->
    <string name="realm_instance">CalMemo.realm</string>
    <!-- Widget -->
    <!-- マニフェストのfilter nameも変更すること -->
    <string name="cm_widget_receive_action">android.intent.action.ACTION_WIDGET_CM_CAMERA</string>
    <string name="title_activity_cm_camera">CmCameraActivity</string>
    <string name="title_activity_album">AlbumActivity</string>
    <string name="title_activity_cm_photographs">CmPhotographsActivity</string>
    <string name="desc_page_back">page back</string>
    <string name="desc_delete_image">delete image</string>
    <string name="desc_main_image">main image</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>
    <string name="dialog_message">本当に削除しますか？</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">Cancel</string>
    <string name="cm_load_image_failed">画像の読み込みに失敗しました。</string>
    <string name="message_failed_datetime">撮影日の取得に失敗しました。本日の日付で登録します。</string>
    <string name="hint_copyright">ライセンス</string>

</resources>
