<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="alonedroid.com.calmemo.scene.hint.CmHintFragment_"
    >

    <RelativeLayout
        android:id="@+id/cm_photographs_title"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_alignParentTop="true"
        android:background="@color/grey_1"
        android:paddingLeft="@dimen/dimen_space_8dp"
        android:paddingRight="@dimen/dimen_space_8dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="42.5dp"
            android:layout_alignParentTop="true"
            android:gravity="center|center"
            android:text="@string/cm_hint_title"
            />

        <ImageView
            android:id="@+id/cm_hint_back_view"
            android:layout_width="42.5dp"
            android:layout_height="42.5dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/desc_page_back"
            android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"
            android:tint="@color/cm_text_sunday_color"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/cm_hint_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_line"
        android:layout_below="@id/cm_photographs_title"
        android:background="@color/cm_text_color"
        android:orientation="horizontal"
        />

    <net.nend.android.NendAdIconLayout
        android:id="@+id/ad_view"
        NendApiKey="18151642e3c0017670c10d242cdcb73817764f81"
        NendIconCount="4"
        NendSpotId="373657"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />
    <!-- 広告が気に入らない
    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adUnitId="ca-app-pub-3760137741555384/1892368555"
        ads:adSize="BANNER"
        />
    -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ad_view"
        android:layout_below="@id/cm_hint_bar"
        android:contentDescription="@string/desc_main_image"
        >

        <LinearLayout
            android:id="@+id/cm_hint_main_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            />
    </ScrollView>
</RelativeLayout>